fix issue from accidental inherited alignment

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -1,5 +1,7 @@
 form {
   margin-bottom: $vertical-rhythm;
+  text-align: left;
+  
   .input-container {
     position: relative;
     display: block;
